# JnitraceForCpp

./: build.gradle  readme.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/tool/jnitrace/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/jnitrace/: MainActivity.java  traceTest.java
app/src/main/java/com/tool/jnitrace/: MainActivity.java
app/src/main/jni/: CMakeLists.txt  Jnitrace.cpp  Jnitrace.h  JnitraceForC.cpp  JnitraceForC.h  main.cpp  stringHandler.cpp
app/src/main/jni/includes/: JnitraceForC.h  mylibc.h  stringHandler.h
app/src/main/jni/log/: logging.h
app/src/main/jni/test/: test.cpp
app/src/main/jni/uitils/: AllInclude.h  JnitraceForC.cpp  parse.cpp  parse.h
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/tool/jnitrace/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
jniTrace/: build.gradle
jniTrace/src/androidTest/java/com/tool/jnitrace/: ExampleInstrumentedTest.java
jniTrace/src/main/: AndroidManifest.xml
jniTrace/src/main/cpp/: CMakeLists.txt  JnitraceForC.cpp  JnitraceForC.h  jnitrace.cpp  main.cpp
jniTrace/src/main/cpp/test/: test.cpp
jniTrace/src/main/cpp/uitils/: parse.cpp
jniTrace/src/main/java/com/tool/jnitrace/: JniTrace.java  traceTest.java
jniTrace/src/test/java/com/tool/jnitrace/: ExampleUnitTest.java
nativeLib/: .gitignore  build.gradle
nativeLib/src/main/: AndroidManifest.xml
nativeLib/src/main/cpp/: CMakeLists.txt
nativeLib/src/main/cpp/adapter/: CMakeLists.txt  adapter.cpp
nativeLib/src/main/cpp/dlfc/: CMakeLists.txt  elf_util.cpp
nativeLib/src/main/cpp/dlfc/xDL/: CMakeLists.txt  xdl.cpp  xdl_lzma.cpp
nativeLib/src/main/cpp/findsyscall/: BinarySyscallFinder.cpp  CMakeLists.txt
nativeLib/src/main/cpp/hidemaps/: CMakeLists.txt  hide_maps_path.cpp
nativeLib/src/main/cpp/hook/: CMakeLists.txt  HookUtils.cpp
nativeLib/src/main/cpp/hook/Dobby/builtin-plugin/BionicLinkerUtil/: bionic_linker_util.cc
nativeLib/src/main/cpp/hook/signhook/: CMakeLists.txt
nativeLib/src/main/cpp/hook/signhook/common/: cow_vector.h  dlfcn_nougat.cc  elf.cpp  elf.h  elf_util.cc  elf_util.h  log.h  types.cc  types.h
nativeLib/src/main/cpp/hook/signhook/exts/distorm/: CMakeLists.txt  distorm.c  distorm.h
nativeLib/src/main/cpp/hook/signhook/exts/ucontext/: CMakeLists.txt  breakpad_getcontext.S
nativeLib/src/main/cpp/hook/signhook/exts/ucontext/aarch64/: config.h  getcontext.S  libc-symbols.h  makecontext.c  setcontext.S  swapcontext.S  sysdep.c  sysdep.h  ucontext_i.h
nativeLib/src/main/cpp/hook/signhook/exts/ucontext/aarch64/common/: sysdep.h
nativeLib/src/main/cpp/hook/signhook/exts/ucontext/arm/: arm_bx.h  getcontext.S  makecontext.c  setcontext.S  swapcontext.S  sysdep.h  ucontext.mk  ucontext_i.h
nativeLib/src/main/cpp/hook/signhook/exts/ucontext/arm/common/: sysdep.h
nativeLib/src/main/cpp/hook/signhook/exts/vixl/: CMakeLists.txt  code-buffer-vixl.cc  code-buffer-vixl.h  cpu-features.cc  cpu-features.h  globals-vixl.h  invalset-vixl.h  pool-manager-impl.h  pool-manager.h  utils-vixl.h
nativeLib/src/main/cpp/hook/signhook/exts/vixl/aarch32/: assembler-aarch32.cc  assembler-aarch32.h  disasm-aarch32.h  location-aarch32.h  macro-assembler-aarch32.h
nativeLib/src/main/cpp/hook/signhook/exts/vixl/aarch64/: assembler-aarch64.cc  assembler-aarch64.h  constants-aarch64.h  cpu-aarch64.cc  cpu-aarch64.h  cpu-features-auditor-aarch64.cc  decoder-aarch64.cc  decoder-aarch64.h  decoder-constants-aarch64.h  disasm-aarch64.cc  disasm-aarch64.h  instructions-aarch64.h  instrument-aarch64.cc  logic-aarch64.cc  macro-assembler-aarch64.cc  macro-assembler-aarch64.h  operands-aarch64.cc  operands-aarch64.h  pointer-auth-aarch64.cc  simulator-aarch64.cc  simulator-aarch64.h  simulator-constants-aarch64.h
nativeLib/src/main/cpp/hook/signhook/include/: inline_hook.h
nativeLib/src/main/cpp/hook/signhook/inline/: inline_hook.cc
nativeLib/src/main/cpp/hook/signhook/inline/arm32/: inline_hook_arm32.cpp
nativeLib/src/main/cpp/hook/signhook/inline/arm64/: inline_hook_arm64.cc
nativeLib/src/main/cpp/hook/signhook/instrcache/: instr_cache.h
nativeLib/src/main/cpp/hook/signhook/instrcache/arm32/: translator.cc  translator.h
nativeLib/src/main/cpp/hook/signhook/instrcache/arm64/: translator.cc  translator.h
nativeLib/src/main/cpp/hook/signhook/memory/: code_buffer.cc  code_buffer.h
nativeLib/src/main/cpp/hook/signhook/platform/: memory.cc  memory.h
nativeLib/src/main/cpp/includes/: BinarySyscallFinder.h  HookClassUtils.h  HookUtils.h  MapItemInfo.h  ZhenxiLog.h  adapter.h  appUtils.h  arch.h  common_macros.h  fileUtils.h  hide_maps_path.h  libpath.h  linkerHandler.h  logging.h  mylibc.h  parse.h  pmparser.h  raw_syscall.h  stringUtils.h  version.h  xdl.h  xunwind.h
nativeLib/src/main/cpp/libpath/: CMakeLists.txt  libpath.cpp
nativeLib/src/main/cpp/linker/: CMakeLists.txt  Symbol.cpp  Symbol.h  linkerHandler.cpp  solist_util.cpp  solist_util.h
nativeLib/src/main/cpp/proc_maps_parser/: CMakeLists.txt  pmparser.cpp
nativeLib/src/main/cpp/raw_syscall/: CMakeLists.txt  syscall32.S  syscall64.S
nativeLib/src/main/cpp/utils/: CMakeLists.txt  appUtils.cpp  fileUtils.cpp  parse.cpp  stringUtils.cpp
nativeLib/src/main/cpp/xunwind/: CMakeLists.txt  xu_cfi.cpp  xu_cfi.h  xu_config.h  xu_eh.cpp  xu_eh.h  xu_formatter.cpp  xu_formatter.h  xu_fp.h  xu_fp_arm64.cpp  xu_fp_unimplemented.c  xu_libbacktrace.cpp  xu_libbacktrace.h  xu_libcorkscrew.cpp  xu_libcorkscrew.h  xu_libcxx.cpp  xu_libcxx.h  xu_log.h  xu_printer.cpp  xu_printer.h  xu_util.cpp  xu_util.h  xunwind.cpp  xunwind.map.txt  xunwind_ctor.cpp
